--- a/radeon-profile/debian/rules
+++ b/radeon-profile/debian/rules
@@ -15,8 +15,8 @@ builddir:
 
 builddir/Makefile: builddir
 		#switch trusty, xenial -> bionic, cosmic
-		cd builddir && qmake PREFIX=/usr ../$(APPNAME).pro
-		#cd builddir && qmake -qt=opt-qt59 PREFIX=/usr ./$(APPNAME).pro
+		cd builddir && qmake PREFIX=/usr ./$(APPNAME).pro
+		#cd builddir && qmake -qt=opt-qt59 PREFIX=/usr ../$(APPNAME).pro
 build: build-stamp
 
 build-stamp: builddir/Makefile
