--- a/radeon-profile/debian/rules
+++ b/radeon-profile/debian/rules
@@ -14,11 +14,9 @@ builddir:
 		mkdir -p builddir
 
 builddir/Makefile: builddir
-		#switch trusty, xenial -> bionic, cosmic
 		#cd builddir && qmake PREFIX=/usr ../$(APPNAME).pro
-		cd builddir && qmake PREFIX=/usr ../radeon-profile/$(APPNAME).pro
-
-		#cd builddir && qmake -qt=opt-qt59 PREFIX=/usr ../$(APPNAME).pro
+		cd builddir && qmake PREFIX=/usr ../$(APPNAME)/$(APPNAME).pro
+		#cd builddir && qmake -qt=opt-qt59 PREFIX=/usr ../$(APPNAME)/$(APPNAME).pro
 build: build-stamp
 
 build-stamp: builddir/Makefile
@@ -26,11 +24,10 @@ build-stamp: builddir/Makefile
 		# Add here commands to compile the package.
 		cd builddir && $(MAKE) #$(MAKEFLAGS)
 		# Generate translations
-		#switch trusty, xenial -> bionic, cosmic
-		lupdate $(APPNAME).pro
-		lrelease $(APPNAME).pro
-		#/opt/qt59/bin/lupdate $(APPNAME).pro
-		#/opt/qt59/bin/lrelease $(APPNAME).pro
+		lupdate $(APPNAME)/$(APPNAME).pro
+		lrelease $(APPNAME)/$(APPNAME).pro
+		#/opt/qt59/bin/lupdate $(APPNAME)/$(APPNAME).pro
+		#/opt/qt59/bin/lrelease $(APPNAME)/$(APPNAME).pro
 		touch $@
 
 clean:
@@ -52,10 +49,14 @@ install: build
 		mkdir $(DESTDIR)/usr/share/applications
 		mkdir $(DESTDIR)/usr/share/pixmaps
 		mkdir $(DESTDIR)/usr/share/$(APPNAME)
-		cp $(CURDIR)/builddir/$(APPNAME) $(DESTDIR)/usr/share/$(APPNAME)
-		cp $(CURDIR)/extra/$(APPNAME).desktop $(DESTDIR)/usr/share/applications
-		cp $(CURDIR)/extra/$(APPNAME).png $(DESTDIR)/usr/share/pixmaps
-		mv $(CURDIR)/translations/*.qm $(DESTDIR)/usr/share/$(APPNAME)
+		#cp $(CURDIR)/builddir/$(APPNAME) $(DESTDIR)/usr/share/$(APPNAME)
+		cp -r $(CURDIR)/builddir/$(APPNAME) $(DESTDIR)/usr/share/$(APPNAME)
+		#cp $(CURDIR)/extra/$(APPNAME).desktop $(DESTDIR)/usr/share/applications
+		cp  $(CURDIR)/$(APPNAME)/extra/$(APPNAME).desktop $(DESTDIR)/usr/share/applications
+		#cp $(CURDIR)/extra/$(APPNAME).png $(DESTDIR)/usr/share/pixmaps
+		cp  $(CURDIR)/$(APPNAME)/extra/$(APPNAME).png $(DESTDIR)/usr/share/pixmaps
+		#mv $(CURDIR)/translations/*.qm $(DESTDIR)/usr/share/$(APPNAME)
+		mv  $(CURDIR)/$(APPNAME)/translations/*.qm $(DESTDIR)/usr/share/$(APPNAME)
 
 		# Add here commands to install the package into debian/your_appname
 		cd builddir && $(MAKE) INSTALL_ROOT=$(DESTDIR) install
