--- a/radeon-profile/pkg/debian/rules
+++ b/radeon-profile/pkg/debian/rules
@@ -15,7 +15,8 @@ builddir:
 
 builddir/Makefile: builddir
 		#cd builddir && qmake PREFIX=/usr ../$(APPNAME).pro
-		cd builddir && qmake -qt=opt-qt59 PREFIX=/usr ../$(APPNAME).pro
+		#cd builddir && qmake PREFIX=/usr ../$(APPNAME)/$(APPNAME).pro
+		cd builddir && qmake -qt=opt-qt59 PREFIX=/usr ../$(APPNAME)/$(APPNAME).pro
 build: build-stamp
 
 build-stamp: builddir/Makefile
@@ -23,10 +24,10 @@ build-stamp: builddir/Makefile
 		# Add here commands to compile the package.
 		cd builddir && $(MAKE) #$(MAKEFLAGS)
 		# Generate translations
-		#lupdate $(APPNAME).pro
-		#lrelease $(APPNAME).pro
-		/opt/qt59/bin/lupdate $(APPNAME).pro
-		/opt/qt59/bin/lrelease $(APPNAME).pro
+		#lupdate $(APPNAME)/$(APPNAME).pro
+		#lrelease $(APPNAME)/$(APPNAME).pro
+		/opt/qt59/bin/lupdate $(APPNAME)/$(APPNAME).pro
+		/opt/qt59/bin/lrelease $(APPNAME)/$(APPNAME).pro
 		touch $@
 
 clean:
@@ -48,10 +49,14 @@ install: build
 		mkdir $(DESTDIR)/usr/share/applications
 		mkdir $(DESTDIR)/usr/share/pixmaps
 		mkdir $(DESTDIR)/usr/share/$(APPNAME)
-		cp $(CURDIR)/builddir/$(APPNAME) $(DESTDIR)/usr/share/$(APPNAME)
-		cp $(CURDIR)/extra/$(APPNAME).desktop $(DESTDIR)/usr/share/applications
-		cp $(CURDIR)/extra/$(APPNAME).png $(DESTDIR)/usr/share/pixmaps
-		mv $(CURDIR)/translations/*.qm $(DESTDIR)/usr/share/$(APPNAME)
+		#cp $(CURDIR)/builddir/$(APPNAME) $(DESTDIR)/usr/share/$(APPNAME)
+		cp -r $(CURDIR)/builddir/$(APPNAME) $(DESTDIR)/usr/share/$(APPNAME)
+		#cp $(CURDIR)/extra/$(APPNAME).desktop $(DESTDIR)/usr/share/applications
+		cp  $(CURDIR)/$(APPNAME)/extra/$(APPNAME).desktop $(DESTDIR)/usr/share/applications
+		#cp $(CURDIR)/extra/$(APPNAME).png $(DESTDIR)/usr/share/pixmaps
+		cp  $(CURDIR)/$(APPNAME)/extra/$(APPNAME).png $(DESTDIR)/usr/share/pixmaps
+		#mv $(CURDIR)/translations/*.qm $(DESTDIR)/usr/share/$(APPNAME)
+		mv  $(CURDIR)/$(APPNAME)/translations/*.qm $(DESTDIR)/usr/share/$(APPNAME)
 
 		# Add here commands to install the package into debian/your_appname
 		cd builddir && $(MAKE) INSTALL_ROOT=$(DESTDIR) install
