--- a/radeon-profile/pkg/debian/rules
+++ b/radeon-profile/pkg/debian/rules
@@ -8,6 +8,7 @@
 APPNAME := radeon-profile
 DESTDIR := $(CURDIR)/debian/$(APPNAME)
 #TR_DIR=$(CURDIR)/debian/$(APPNAME)/usr/share/qt4/translations
+QTVER := "qt59|qt56" 
 
 
 builddir:
@@ -16,7 +17,7 @@ builddir:
 builddir/Makefile: builddir
 		#cd builddir && qmake PREFIX=/usr ../$(APPNAME).pro
 		#cd builddir && qmake PREFIX=/usr ../$(APPNAME)/$(APPNAME).pro
-		cd builddir && qmake -qt=opt-qt59 PREFIX=/usr ../$(APPNAME)/$(APPNAME).pro
+		cd builddir && qmake -qt=opt-$QTVER PREFIX=/usr ../$(APPNAME)/$(APPNAME).pro
 build: build-stamp
 
 build-stamp: builddir/Makefile
@@ -26,8 +27,8 @@ build-stamp: builddir/Makefile
 		# Generate translations
 		#lupdate $(APPNAME)/$(APPNAME).pro
 		#lrelease $(APPNAME)/$(APPNAME).pro
-		/opt/qt59/bin/lupdate $(APPNAME)/$(APPNAME).pro
-		/opt/qt59/bin/lrelease $(APPNAME)/$(APPNAME).pro
+		/opt/$QTVER/bin/lupdate $(APPNAME)/$(APPNAME).pro
+		/opt/$QTVER/bin/lrelease $(APPNAME)/$(APPNAME).pro
 		touch $@
 
 clean:
