--- a/radeon-profile/pkg/debian/control
+++ b/radeon-profile/pkg/debian/control
@@ -9,9 +9,9 @@ Build-Depends: debhelper (>= 9),
                mesa-common-dev,
                libgl1-mesa-dev,
                libglu1-mesa-dev,
-               qt59charts-no-lgpl | libqt5charts5-dev,
-               qt59-meta-full | qt5-default,
-               qt59tools | qttools5-dev-tools,
+               qt56charts-no-lgpl |qt59charts-no-lgpl | libqt5charts5-dev,
+               qt56-meta-full |qt59-meta-full | qt5-default,
+               qt56tools |qt59tools | qttools5-dev-tools,
                gcc, gdb,
                libqt4-dev,
                qt4-qmake,
