--- a/radeon-profile/pkg/debian/rules
+++ b/radeon-profile/pkg/debian/rules
@@ -8,8 +8,9 @@
 APPNAME := radeon-profile
 DESTDIR := $(CURDIR)/debian/$(APPNAME)
 #TR_DIR=$(CURDIR)/debian/$(APPNAME)/usr/share/qt4/translations
-#QTVER := $(qt59 | qt56)
-QTVER := $(qt59) | $(qt56)
+#QTVER := $(qt59 | $qt56)
+#QTVER := $(qt59) | $(qt56)
+QTVER=$(qt59 | qt56)
 
 
 builddir:
