--- a/radeon-profile/pkg/debian/rules
+++ b/radeon-profile/pkg/debian/rules
@@ -11,7 +11,8 @@ DESTDIR := $(CURDIR)/debian/$(APPNAME)
 #QTVER := $(qt59 | $qt56)
 #QTVER := $(qt59) | $(qt56)
 #QTVER=$(qt59 | qt56)
-QTVER="qt59 | qt56"
+#QTVER="qt59 | qt56"
+QTVER="(qt59) | (qt56)"
 
 #QTVER=(qt59 | qt56)
 #QTVER=$(qt59) | $(qt56)
