--- a/radeon-profile/pkg/debian/rules
+++ b/radeon-profile/pkg/debian/rules
@@ -12,7 +12,8 @@ DESTDIR := $(CURDIR)/debian/$(APPNAME)
 #QTVER := $(qt59) | $(qt56)
 #QTVER=$(qt59 | qt56)
 #QTVER="qt59 | qt56"
-QTVER="(qt59) | (qt56)"
+#QTVER="(qt59) | (qt56)"
+QTVER="$(qt59) | $(qt56)"
 
 #QTVER=(qt59 | qt56)
 #QTVER=$(qt59) | $(qt56)
