--- a/radeon-profile/pkg/debian/rules
+++ b/radeon-profile/pkg/debian/rules
@@ -14,9 +14,9 @@ DESTDIR := $(CURDIR)/debian/$(APPNAME)
 #QTVER="qt59 | qt56"
 #QTVER="(qt59) | (qt56)"
 QTVER="$(qt59) | $(qt56)"
+QTVER=$(qt59) | $(qt56)
 
 #QTVER=(qt59 | qt56)
-#QTVER=$(qt59) | $(qt56)
 #QTVER=$(qt59) | QTVER=$(qt56)
 
 
