--- a/radeon-profile/pkg/debian/rules
+++ b/radeon-profile/pkg/debian/rules
@@ -14,10 +14,10 @@ DESTDIR := $(CURDIR)/debian/$(APPNAME)
 #QTVER="qt59 | qt56"
 #QTVER="(qt59) | (qt56)"
 #QTVER="$(qt59) | $(qt56)"
-QTVER= $(qt59) | $(qt56)
+#QTVER= $(qt59) | $(qt56)
 
 #QTVER=(qt59 | qt56)
-#QTVER=$(qt59) | QTVER=$(qt56)
+QTVER=$(qt59) | QTVER=$(qt56)
 
 
 builddir:
