--- a/radeon-profile/debian/control
+++ b/radeon-profile/debian/control
@@ -10,9 +10,9 @@ Build-Depends: debhelper (>= 9),
                mesa-common-dev,
                libgl1-mesa-dev,
                libglu1-mesa-dev,
-               qt59charts-no-lgpl | libqt5charts5-dev,
-               qt59-meta-full | qt5-default,
-               qt59tools | qttools5-dev-tools,
+               libqt5charts5-dev,
+               qt5-default,
+               qttools5-dev-tools,
                gcc, gdb,
                libqt4-dev,
                qt4-qmake,
