--- a/radeon-profile/debian/rules
+++ b/radeon-profile/debian/rules
@@ -2,7 +2,11 @@
 #export DH_VERBOSE=1
 # This is the debhelper compatability version to use.
 
-#MAKEFLAGS="-j $(grep -c ^processor /proc/cpuinfo)"
+MY_MAKEFLAGS=
+ifneq (,$(filter parallel=%,$(DEB_BUILD_OPTIONS)))
+  NUMJOBS=$(patsubst parallel=%,%,$(filter parallel=%,$(DEB_BUILD_OPTIONS)))
+  MY_MAKEFLAGS=-j$(NUMJOBS)
+endif
 
 #export DH_COMPAT=3
 APPNAME := radeon-profile
@@ -16,7 +20,7 @@ build-stamp:
 	# Build process
 	cd $(APPNAME)
 	qmake PREFIX=/usr ./$(APPNAME)/$(APPNAME).pro
-	make
+	make $(MY_MAKEFLAGS)
 	# Generate translations
 	lupdate $(APPNAME)/$(APPNAME).pro
 	lrelease $(APPNAME)/$(APPNAME).pro
@@ -37,25 +41,22 @@ clean:
 install: build
 		dh_testdir
 		dh_testroot
-		dh_clean -k
+		dh_prep
 		dh_installdirs
-		mkdir $(DESTDIR)/usr
-		mkdir $(DESTDIR)/usr/bin
-		mkdir $(DESTDIR)/usr/share
-		mkdir $(DESTDIR)/usr/share/applications
-		mkdir $(DESTDIR)/usr/share/pixmaps
-		mkdir $(DESTDIR)/usr/share/$(APPNAME)
+		install -pdm755 $(DESTDIR)/usr/bin
+		install -pdm755 $(DESTDIR)/usr/share/applications
+		install -pdm755 $(DESTDIR)/usr/share/pixmaps
+		install -pdm755 $(DESTDIR)/usr/share/$(APPNAME)
 		#cp $(CURDIR)/builddir/$(APPNAME) $(DESTDIR)/usr/share/$(APPNAME)
 		cp -r $(CURDIR)/target/$(APPNAME) $(DESTDIR)/usr/share/$(APPNAME)
+		#install -Dm664 $(CURDIR)/target/$(APPNAME) $(DESTDIR)/usr/share/$(APPNAME)
 		#cp $(CURDIR)/extra/$(APPNAME).desktop $(DESTDIR)/usr/share/applications
-		cp  $(CURDIR)/$(APPNAME)/extra/$(APPNAME).desktop $(DESTDIR)/usr/share/applications
+		install -Dm664 $(CURDIR)/$(APPNAME)/extra/$(APPNAME).desktop $(DESTDIR)/usr/share/applications
 		#cp $(CURDIR)/extra/$(APPNAME).png $(DESTDIR)/usr/share/pixmaps
-		cp  $(CURDIR)/$(APPNAME)/extra/$(APPNAME).png $(DESTDIR)/usr/share/pixmaps
+		install -Dm664 $(CURDIR)/$(APPNAME)/extra/$(APPNAME).png $(DESTDIR)/usr/share/pixmaps
 		#mv $(CURDIR)/translations/*.qm $(DESTDIR)/usr/share/$(APPNAME)
 		mv  $(CURDIR)/$(APPNAME)/translations/*.qm $(DESTDIR)/usr/share/$(APPNAME)
 
-		# Add here commands to install the package into debian/your_appname
-		$(MAKE) INSTALL_ROOT=$(DESTDIR) install
 # Build architecture-independent files here.
 binary-indep: build install
 # We have nothing to do by default.
