--- a/radeon-profile/debian/rules
+++ b/radeon-profile/debian/rules
@@ -45,14 +45,14 @@ install: build
 		install -pdm755 $(DESTDIR)/usr/share/pixmaps
 		install -pdm755 $(DESTDIR)/usr/share/$(APPNAME)
 		#cp $(CURDIR)/builddir/$(APPNAME) $(DESTDIR)/usr/share/$(APPNAME)
-		cp -r $(CURDIR)/target/$(APPNAME) $(DESTDIR)/usr/share/$(APPNAME)
+		install -Dm664 $(CURDIR)/target/$(APPNAME) $(DESTDIR)/usr/share/$(APPNAME)
 		#install -Dm664 $(CURDIR)/target/$(APPNAME) $(DESTDIR)/usr/share/$(APPNAME)
 		#cp $(CURDIR)/extra/$(APPNAME).desktop $(DESTDIR)/usr/share/applications
 		install -Dm664 $(CURDIR)/$(APPNAME)/extra/$(APPNAME).desktop $(DESTDIR)/usr/share/applications
 		#cp $(CURDIR)/extra/$(APPNAME).png $(DESTDIR)/usr/share/pixmaps
 		install -Dm664 $(CURDIR)/$(APPNAME)/extra/$(APPNAME).png $(DESTDIR)/usr/share/pixmaps
 		#mv $(CURDIR)/translations/*.qm $(DESTDIR)/usr/share/$(APPNAME)
-		mv  $(CURDIR)/$(APPNAME)/translations/*.qm $(DESTDIR)/usr/share/$(APPNAME)
+		install -Dm664 $(CURDIR)/$(APPNAME)/translations/*.qm $(DESTDIR)/usr/share/$(APPNAME)
 
 # Build architecture-independent files here.
 binary-indep: build install
