--- a/radeon-profile/debian/control
+++ b/radeon-profile/debian/control
@@ -14,8 +14,8 @@ Build-Depends: debhelper (>= 9),
                qt5-default,
                qttools5-dev-tools,
                gcc, gdb,
-               libqt4-dev,
-               qt4-qmake,
+#               libqt4-dev,
+#               qt4-qmake,
                qt5-qmake,
                libxrandr2,
                libxrandr-dev
