--- a/radeon-profile/pkg/debian/control
+++ b/radeon-profile/pkg/debian/control
@@ -14,8 +14,8 @@ Build-Depends: debhelper (>= 9),
                qt59-meta-full,
                qt59tools,
                gcc, gdb,
-               libqt4-dev,
-               qt4-qmake,
+#               libqt4-dev,
+#               qt4-qmake,
                qt5-qmake,
                libxrandr2,
                libxrandr-dev
