--- a/radeon-profile/pkg/debian/control
+++ b/radeon-profile/pkg/debian/control
@@ -13,8 +13,8 @@ Build-Depends: debhelper (>= 9),
                qt59-meta-full | qt56-meta-full | qt5-default,
                qt59tools | qt56tools | qttools5-dev-tools,
                gcc, gdb,
-#               libqt4-dev,
-#               qt4-qmake,
+               libqt4-dev,
+               qt4-qmake,
                qt5-qmake,
                libxrandr2,
                libxrandr-dev
